--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -7,18 +7,29 @@ slug: /mine-hnt/validators/requirements
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Based on early tests, validator node requirements include:
+The following are meant to be used as guidelines for the hardware requirements when building a validator, more so than absolute requirements, to help minimize your [performance penalties](https://docs.helium.com/mine-hnt/validators/penalties/). Minimizing your penalties increases your chances of being elected to the Consensus Group and earning more rewards. 
 
+As the role of  validator continually grows, it may require more resources over time. Once you have built your validator, you can refer to some of the steps shown at [Troubleshooting](https://docs.helium.com/mine-hnt/validators/troubleshooting/) to check its performance.
+
+Most Validator operators who experience the least penalties have configurations similar to or greater than these guidelines:
+- Physical or Virtual:
+  - Many validators with the least amount of penalties run bare metal validators rather than a Virtual Private Server (VPS)
+- Internet Connectivity:
+  - Commercial grade Internet connectivity with redundancy such as BGP. Not home fiber or cable modem Internet.
+  - Static WAN IP address
+  - Firewall running on validator host OS rather than validator behind a separate firewall
 - Operating system: 
-  - Planning on running from docker: Any linux based system capable of running docker
-  - Planning on running from source: Ubuntu 20.04 LTS
+  - When running from docker: Any linux based system capable of running docker
+  - When running from source: Ubuntu 20.04 LTS
+  - Note: Testing has shown there is ~20% overhead when running from docker when compared to running from source. If you are running a single validator on bare metal hardware, this overhead is negligable but can be more pronounced when running on a Virtual Private Server (VPS) or running multiple validators on a single bare metal server.
 - CPU: 
-  - Intel, AMD or ARM based processor 3.0 GHz or above with 4 cores or equivalent.
-  - In testnet, scores of [GeekBench 5](https://www.geekbench.com/) Multi-Core of greater than 2,200 have performed well
+  - Intel, AMD or ARM based processor 3.0 GHz or above with 4 cores or equivalent, such as AMD Ryzen Zen3 CPU (5950X being the top choice) and Intel i9-1200k.
+  - Note: Single threaded performance is more important than multi-threaded performance
+  - [GeekBench 5](https://www.geekbench.com/) scores of greater than 1,000 Single-Core and greater than 5,000 Multi-core have performed well. Many of the high performance validators score higher than 2,000 for Single-core and 15,000 for Multi-core
   - For Intel and AMD systems, [AVX2 or AVX support](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions) is required. Verify your CPU supports these extensions by checking `grep avx /proc/cpuinfo` and verifying that AVX support is included in the output.
-  - These recommendations may change for mainnet as the size of consensus groups grow and hotspot transactions are added
-- Memory: 8 GB or above
-- Storage: 256 GB or more for mainnet.  64GB is sufficient for testnet. It is recommended that you keep your validator data on a separate disk.
+- Memory: 16 GB or above (many validators run more)
+- Storage: 20GB or more standard disk for OS and 256GB or more, high performance NVME for validator_data.  64GB of standard speed disk is sufficient for testnet. It is recommended that you keep your validator_data directory on a separate high performace disk from the OS.
+  - Examples of PCI Express NVMe 4.0 that validators use are Sabrent Rocket Plus 2TB, Seagate FireCuda 530 2TB and Western Digital WD Black. NOTE: 2TB NVME dual sided drives have higher IOPS than single sided NVME drives.
 - If using AWS, a t2.xlarge or c5a.xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with similar capabilities should be the target.
 - Static IP address with ports `2154`(TCP) and `8080`(TCP) opened in your firewall with a route available to your validator host.
 - Running on stable network connection free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
