--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -10,7 +10,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Understanding Hexagons
 
-Hexagons, while also a six-sided shape, is the underlying representation of the earth on the Helium network. Based on Uber's H3 index, the surface of the earth can be represented by a grid of hexagons at different resolutions, with higher resolutions covering a larger area, and the smallest resolution covering centimeters of the earth. To understand the technical details and the implementation, please check out the <a href="https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5">blog one of the core developers</a>.
+Hexagons, while also a six-sided shape, is the underlying representation of the earth on the Helium network. Based on Uber's H3 index, the surface of the earth can be represented by a grid of hexagons at different resolutions, with higher resolutions covering a larger area, and the smallest resolution coverage centimeters of the earth. To understand the technical details and the implementation, please check out the <a href="https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5">blog one of the core developers</a>.
 
 | H3 Resolution        |      Average Hexagon Area (km²)      |   Average Hexagon Edge Length (km) |
 | ------------- | :-----------: | -----: |
@@ -30,7 +30,7 @@ Hexagons, while also a six-sided shape, is the underlying representation of the 
 
 ## Hexagons in Helium
 
-Since the genesis block, Hotspot locations have been represented (and continue to) in resolution 12, a semi-precise point location covering 0.3 m². This is why some Hotspot appear to be "a few houses down from where I asserted". But, as the network expanded, concerns over security and privacy regarding Hotspot locations grew alongside with it. 
+Since the genesis block, Hotspot locations have been represented (and continue to) in resolution 12, a semi-precise point location covering 0.3 m². This is why some Hotspot appear to be "a few houses down from where I asserted". But, as the network expanded, concerns over security and privacy over Hotspot locations grew alongside with it. 
 
 
 <img src={useBaseUrl("img/wallets/helium-app/hexagons.png")} width="400"/>
