--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -11,31 +11,40 @@ The following are meant to be used as guidelines for the hardware requirements w
 
 As the role of validator continually grows, it may require more resources over time. Once you have built your validator, please refer to the [Performance Baselining](#performance-baselining) section below.
 
+See details for why Validators [SHOULD NOT BE RUN ON A HOME NETWORK](/mine-hnt/validators/faqs-resources-providers/#technical). The one exception to this is if you live at an actual data center. If that's the case, you're allowed to run Validators at home.
+
 Most Validator operators who experience the least penalties have configurations similar to or greater than these guidelines:
+
 - Physical or Virtual:
   - Many validators with the least amount of penalties run bare metal validators rather than a Virtual Private Server (VPS)
+
 - Internet Connectivity:
-  - Commercial grade Internet connectivity with redundancy such as BGP. Not home fiber or cable modem Internet.
-  - Static WAN IP address
-  - Firewall running on the validator host OS or commercial grade firewall capable of handling thousands of concurrent connections 
-  - These guidelines are intended to mitigate penalties caused by dropped network connections during while in the consense group
+  - Commercial grade Internet connectivity with quality upstream providers and redundancy such as BGP. Not home fiber or cable modem connections.
+  - Commercial grade router/firewall capable of handling thousands of concurrent connections, not consumer grade routers that may cause you to incur penalties due to dropped network connections while in the consense group.
+  - Stable data center/cloud grade network connection free of proxies, NAT, etc. The load is largely symmetrical when producing blocks, so quality upstream connectivity is required.
+  - Static WAN IP address with ports `2154tcp` and `8080 tcp` opened on firewall with a route available to your validator host.
+  - Note: Port 8080 is required for communications with light hotspots a.k.a. light gateways
+
 - Operating system: 
   - When running from docker: Any linux based system capable of running docker
   - When running from source: Ubuntu 20.04 LTS
   - Note: Testing has shown there is ~20% overhead when running from docker when compared to running from source. If you are running a single validator on bare metal hardware, this overhead is negligable but can be more pronounced when running on a Virtual Private Server (VPS) or running multiple validators on a single bare metal server.
-- CPU: 
+
+- CPU:
   - Intel, AMD or ARM based processor 3.0 GHz or above with 4 cores or equivalent, such as AMD Ryzen Zen3 CPU (5950X being the top choice) and Intel i9-12900K.
   - Note: Single threaded performance is more important than multi-threaded performance
+  - Note: The vCPU term within a VPS is not a "core" but often just a hyperthread
   - [GeekBench 5](https://www.geekbench.com/) scores of greater than 1,000 Single-Core and greater than 5,000 Multi-core have performed well. Many of the high performance validators score higher than 2,000 for Single-core and 15,000 for Multi-core
   - For Intel and AMD systems, [AVX2 or AVX support](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions) is required. Verify your CPU supports these extensions by checking `grep avx /proc/cpuinfo` and verifying that AVX support is included in the output.
+
 - Memory: 16 GB or above (many validators run more)
+
 - Storage: 20GB or more standard disk for OS and 256GB or more, high performance NVME for validator_data.  64GB of standard speed disk is sufficient for testnet. It is recommended that you keep your validator_data directory on a separate high performace disk from the OS.
   - Examples of PCI Express NVMe 4.0 that validators use are Sabrent Rocket Plus 2TB, Seagate FireCuda 530 2TB and Western Digital WD Black. NOTE: 2TB NVME dual sided drives have higher IOPS than single sided NVME drives.
-- If using AWS, a t2.xlarge or c5a.xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with similar capabilities should be the target.
-- Static IP address with ports `2154`(TCP) and `8080`(TCP) opened in your firewall with a route available to your validator host.
-  - Note: Port 8080 is required for communications with light hotspots a.k.a. light gateways
-- Running on stable network connection free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
-- It is [discouraged to run Validators at home](/mine-hnt/validators/faqs-resources-providers/#technical). The one exception to this is if you live at an actual data center. If that's the case, you're allowed to run Validators at home.
+
+- Public Cloud/VPS:
+  - If using AWS, a t2.xlarge or c5a.xlarge EC2 instance or equivalent is recommended. 
+  - If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with similar capabilities should be the target.
 
 ## Performance Baselining
   - Follow these steps after the validator is caught up to the tip of the chain and running normally for a few hours.
