--- a/docs/use-the-network/console/troubleshooting.mdx
+++ b/docs/use-the-network/console/troubleshooting.mdx
@@ -44,8 +44,48 @@ use the Helium Mobile app to manage your Hotspots.
 When a label looks greyed out, like the image below, this would indicate that it
 does not have a function attached to it.
 
+### Why can't my sensor/device join?
+
+There's a number of possibilities why a sensor/device may not be able to join. See below for reasons and actions:
+
+- Confirm the sensor still has power (check batteries), and is configured properly. If other similar devices have joined successfully, this may be a hardware or firmware issue for that specific sensor. 
+- Ensure Helium Hotspot coverage is available in your area:
+    - Explorer for Hotspot asserted [locations](https://explorer.helium.com/)
+    - Mapping [data](https://mappers.helium.com/) from community members mapping coverage
+- Double check to verify the **sensor keys (Dev EUI, App EUI, App Key) have been entered correctly** into Console. These keys are typically provided by the sensor manufacturer.
+- If there’s only one Hotspot in the area ensure the sensor and Hotspot are separated by a minimum of at least 3m (approximatelty 10 feet), but ideally no closer than 30-50 feet. A sensor that is too close to a Hotspot may also result in repeated Join Request and Join Accept attempts. 
+- Once all the above items have been checked and there's still no join attempts after a few minutes try and re-initiate a rejoin by whatever means the particular device requires.
+
+Remember after initial joining:
+
+- It takes up to (20-30 mins) for a sensor to be added for the first time due to XOR filter adding sensor credentials to blockchain: for more info check [here](https://docs.helium.com/use-the-network/console/adding-devices/#when-adding-devices-for-the-first-time).
+
 <img
   src={useBaseUrl(
     "img/use-the-network/console/console-troubleshooting-label-greyed.png"
   )}
 />
+
+###  Why are my downlinks not working?
+
+A LoRaWAN Class A device only listens for downlinks immediately after sending
+an uplink. The LoRaWAN specification defines this as the "receive windows"
+(ie:`RX1`) which starts `RX_DELAY1` seconds after the uplink is complete.
+
+<img
+    src={useBaseUrl(
+        "img/use-the-network/console/console-troubleshooting-rxdelay.png"
+    )}
+/>
+
+If the device receives no downlinks during the first window, it will listen
+again one second later during the second receive window (ie: `RX2`).
+
+Sometimes an enqueued downlink may be received by a LoRaWAN gateway too late
+for both windows. This can be due to geographic distance between the gateway
+and the server or due to high latency backhauls used by the gateway (such as
+cellular).
+
+In these cases, it is recommended to explore increasing the `RX_DELAY1` value.
+More information about how to use LoRaWAN Profiles on Console to configure the
+`RX_DELAY1` value is available [here](https://docs.helium.com/use-the-network/console/profiles/#receive-window-delay).
