--- a/docs/wallets/app-wallet/twelve-words.mdx
+++ b/docs/wallets/app-wallet/twelve-words.mdx
@@ -47,7 +47,7 @@ NEVER enter them into a website.
 
 When entering the 12 worlds make sure you:
 1. Enter them in the right order
-2. Get the spelling correct. Check here for correct spelling: [https://github.com/bitcoin/bips/blob/master/bip-0039/english.txt](https://github.com/bitcoin/bips/blob/master/bip-0039/english.tx)
+2. Get the spelling correct. Check here for correct spelling: [https://github.com/bitcoin/bips/blob/master/bip-0039/english.txt](https://github.com/bitcoin/bips/blob/master/bip-0039/english.txt)
 
 No Helium Support person will EVER ask for your 12 words or ask you to enter them into a website to fix a problem.
 
