Fix testnet source build command
the build profile for testnet was updated after mainnet launch but the docs weren't update

--- a/docs/mine-hnt/validators/testnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/testnet/deployment-guide.mdx
@@ -341,7 +341,7 @@ cd miner
 Build the `miner`
 
 ```
-./rebar3 as validator release
+./rebar3 as test_validator release
 ```
 
 Then start the `miner`:
