--- a/docs/large-device-fleet/economics.mdx
+++ b/docs/large-device-fleet/economics.mdx
@@ -11,19 +11,19 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 ## Basic pricing
 100,000 data credits (DC) for $1
 
-1 packet with a payload of up to 24 bytes = 1 DC
-
-payload:
+**Payload size**:
+*  1-24 bytes = 1 DC
 * 25-48 bytes = 2 DC 
 * 49-72 bytes = 3 DC
 * and so on ...
 
 
-Total device packet usage will consist of data and network packets. 
-Data packets are equivalent to 24 bytes of payload. If your device transmits more than 24 bytes at a time,
-divide the payload size and that is how many packets you will be paying for. 50 byte payload will count as
-3 packets (24 +24 + 2 bytes). Command packets consist of network packets related to managing your device’s
-connection to the network. This is sent by the network in the background. It may vary anywhere between 
+### Total device packet usage will consist of: data and network packets. 
+
+**Data packets** carry payload from your device to your systems.
+
+**Network management** packets are sent by the LoRaWAN Network Server in the course of managing your device’s
+connection to the network. This may add anywhere from  
 2-10% extra packets on top of your existing data packets.
 
 The following expenses are only needed if you are planning to have a large number of devices, have specific
@@ -35,7 +35,7 @@ needs to control your network and you have specific security requirements.
 * **Billing reconciliation with hotspots** - Sending money on the blockchain is not free. Because of that, we cannot pay each hotspot for the packet they deliver instantly. To lower the cost of paying hotspots for the data they provide is called “maintaining state channels.” This is equivalent to keeping a running total of who owes whom and reconciling it infrequently. By doing the money transfer only infrequently, transaction fees are lowered. 35,000 DC to open/close a state channel.
 You need to have at least one channel open to receive packets. Due to this, you will have two channels running, with staggered start times, so that one of them is always up and funded with data credits.
 
-## Example calculation for operating a large number of devices
+### Example calculation for operating a large number of devices
 
 Assumptions used for the calculation:
 * Devices: 100,000
@@ -51,10 +51,14 @@ Costs:
 * State channel management = 52 * 2 * 35,000 = 3,640,000 DC
 * Cost of running and managing a Router = varies ($1,000+ per month)
 
-| Upfont or Yearly Costs  | Description                    | Data Credits | Dollars |
-|:------------------------|:-------------------------------|:-------------|:--------|
+| Upfront or Yearly Costs  | Description                    | Data Credits | Dollars |
+|:-----------------------:|:-------------------------------|:-------------|:--------|
 |Upfront                  |OUI + 8 DevAddr                 | 1,000,000 + 8 * 1,000,000 = 9,000,000| $900|
 |Upfront                  |New devices                     |52 x 40,000 = 2,080,000| $200|
 |Yearly                   |Transmissions                   |100,000 * 2 * 52 * 1.10 = 11,440,000| $114.40|
 |Yearly                   |Billing reconciliation   |52 * 2 * 35,000 = 3,640,000|$36.40|
-|Yearly                   |Running and managing a Router   | 0            | $12,000+ (varies)|
+|Yearly                   |Running and managing a Router (Optional)  | 0            | $12,000+ (varies)|
+|-----------------|-----------------|-----------------|----------------|
+|Total Upfront            |OUI + DevAddr + Device registration| 11,000,000|$1,100|
+|Total Yearly (without Router)|Packets plus billing reconciliation| 11,440,000|$114.40|
+|Total Yearly to run own Router| Own Router               | 0| $12,000+ (varies)|
