--- a/docs/large-device-fleet/get-started.mdx
+++ b/docs/large-device-fleet/get-started.mdx
@@ -8,6 +8,6 @@ sidebar_label: Getting started
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 * Buy one or more LoRaWAN device
-* (Optional - only if no Helium coverage in your area) Get a Helium hotspot
+* Get a Helium hotspot (Optional - only if no [Helium coverage](https://explorer.helium.com/) in your area) 
 * Add your device(s) to the Router - you get free credit for 10,000 packets
 * Send data to your application/dashboard
