--- a/docs/large-device-fleet/operating-router-lns.mdx
+++ b/docs/large-device-fleet/operating-router-lns.mdx
@@ -1,12 +1,12 @@
-# Operating your own instance of Router/Console
+# Operating your own instance of Router/LoRaWAN Network Server
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Two different ways to do this:
+There are two different ways to have your own Router/LoRaWAN Network Server (LNS):
 * Run the server yourself, or
 * Get someone else to run and maintain the server for you
-This is a full LoRaWAN network server but you don’t need to know much about LoRaWAN to have this work for you. Being knowledgeable about LoRaWAN will make it easier to operate and troubleshoot the operation of the server and devices.
+This is a full LoRaWAN Network server but you don’t need to know much about LoRaWAN to have this work for you. Being knowledgeable about LoRaWAN will make it easier to operate and troubleshoot the operation of the server and devices.
 
 Router software to run on your own server:
-* Helium's version of [Router][https://github.com/helium/router]
+* Helium's version of [Router](https://github.com/helium/router)
 * Vendor-provided version that is compatible with Helium. Enquire with your preferred LoRaWAN network server provider for the latest in their compatibility with the Helium network.
